test/should-pass/fail/read-only-selectors/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

# define SELECTOR-PTR(name, args) (cast(dkt_selector_func_t)(cast(selector_t* (*)args) __selector::name))()

int-t main() {
  selector-t sel = SELECTOR(hash(object-t));
  USE(sel);
  selector-t* sel-ptr = SELECTOR-PTR(hash,(object-t));
  fprintf(stderr, "sel=%lu\n", *sel-ptr);
  *sel-ptr = cast(selector-t)0; // this should fail
  fprintf(stderr, "sel=%lu\n", *sel-ptr);

  return 0;
}
